--- a/x-telemetry/x-telemetry-plugin/mysql-plugin/pom.xml
+++ b/x-telemetry/x-telemetry-plugin/mysql-plugin/pom.xml
@@ -1,19 +1,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>io.github.x-infra-lab</groupId>
+        <artifactId>x-telemetry-plugin</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>io.github.x-infra-lab</groupId>
-    <artifactId>x-telemetry-agent</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <artifactId>mysql-plugin</artifactId>
+    <packaging>pom</packaging>
 
-    <name>x-telemetry-agent</name>
+    <name>mysql-plugin</name>
+    <modules>
+        <module>mysql-5.x-plugin</module>
+    </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <dependencies>
-
-    </dependencies>
 </project>
