--- a/x-telemetry/x-telemetry-agent/pom.xml
+++ b/x-telemetry/x-telemetry-agent/pom.xml
@@ -17,7 +17,11 @@
     </properties>
 
     <dependencies>
-        
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.4</version>
+        </dependency>
     </dependencies>
 
 </project>
