--- a/x-telemetry/x-telemetry-thirdparty/pom.xml
+++ b/x-telemetry/x-telemetry-thirdparty/pom.xml
@@ -1,21 +1,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>io.github.x-infra-lab</groupId>
+        <artifactId>x-telemetry</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>io.github.x-infra-lab</groupId>
-    <artifactId>x-telemetry</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <artifactId>x-telemetry-thirdparty</artifactId>
+    <packaging>jar</packaging>
 
-    <name>x-telemetry</name>
-    <modules>
-        <module>x-telemetry-agent</module>
-        <module>x-telemetry-plugin</module>
-        <module>x-telemetry-thirdparty</module>
-    </modules>
+    <name>x-telemetry-thirdparty</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+    </dependencies>
 </project>
