--- a/x-telemetry/pom.xml
+++ b/x-telemetry/pom.xml
@@ -12,6 +12,7 @@
         <module>x-telemetry-agent</module>
         <module>x-telemetry-plugin</module>
         <module>x-telemetry-thirdparty</module>
+        <module>x-telemetry-agent-core</module>
     </modules>
 
     <properties>
