--- a/x-telemetry/x-telemetry-agent-core/pom.xml
+++ b/x-telemetry/x-telemetry-agent-core/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>guava</artifactId>
             <version>33.2.1-jre</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.17.0</version>
+        </dependency>
 
         <!-- beanutils -->
         <dependency>
