--- a/x-telemetry/x-telemetry-plugin/mysql-plugin/mysql-5.x-plugin/pom.xml
+++ b/x-telemetry/x-telemetry-plugin/mysql-plugin/mysql-5.x-plugin/pom.xml
@@ -18,6 +18,10 @@
     </properties>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>5.3.39</version>
+        </dependency>
     </dependencies>
 </project>
