--- a/x-telemetry/x-telemetry-plugin/pom.xml
+++ b/x-telemetry/x-telemetry-plugin/pom.xml
@@ -20,4 +20,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>io.github.xinfra.lab</groupId>
+            <artifactId>x-telemetry-agent-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
