--- a/x-telemetry/x-telemetry-agent-core/pom.xml
+++ b/x-telemetry/x-telemetry-agent-core/pom.xml
@@ -33,6 +33,7 @@
             <version>1.15.10</version>
         </dependency>
 
+        <!-- utils -->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
@@ -43,15 +44,12 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.17.0</version>
         </dependency>
-
-        <!-- beanutils -->
         <dependency>
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
             <version>1.9.4</version>
         </dependency>
-
-        <!-- beanutils -->
+        <!-- utils -->
 
         <!-- log -->
         <dependency>
@@ -59,7 +57,6 @@
             <artifactId>log4j-jcl</artifactId>
             <version>2.24.2</version>
         </dependency>
-
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
@@ -71,6 +68,12 @@
             <version>2.24.2</version>
         </dependency>
         <!-- log -->
+
+        <dependency>
+            <groupId>io.opentelemetry</groupId>
+            <artifactId>opentelemetry-sdk</artifactId>
+            <version>1.44.1</version>
+        </dependency>
 
 
         <dependency>
