--- a/x-telemetry/x-telemetry-plugin/spring-plugin/spring-mvc-5.x-plugin/pom.xml
+++ b/x-telemetry/x-telemetry-plugin/spring-plugin/spring-mvc-5.x-plugin/pom.xml
@@ -17,6 +17,17 @@
     </properties>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>5.3.39</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
