--- a/x-telemetry-server/pom.xml
+++ b/x-telemetry-server/pom.xml
@@ -14,10 +14,23 @@
     </properties>
 
     <dependencies>
+        <!-- storage for trace data-->
         <dependency>
             <groupId>com.datastax.cassandra</groupId>
             <artifactId>cassandra-driver-core</artifactId>
             <version>3.11.5</version>
+        </dependency>
+        <!-- storage for metric data-->
+        <dependency>
+            <groupId>org.questdb</groupId>
+            <artifactId>questdb</artifactId>
+            <version>8.2.1</version>
+        </dependency>
+        <!-- storage for log data-->
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+            <version>7.17.26</version>
         </dependency>
     </dependencies>
 </project>
