--- a/x-telemetry/x-telemetry-agent-core/pom.xml
+++ b/x-telemetry/x-telemetry-agent-core/pom.xml
@@ -100,6 +100,10 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <shadedArtifactAttached>false</shadedArtifactAttached>
+                            <createDependencyReducedPom>true</createDependencyReducedPom>
+                            <createSourcesJar>true</createSourcesJar>
+                            <shadeSourcesContent>true</shadeSourcesContent>
                             <artifactSet>
                                 <excludes>
                                     <exclude>net.bytebuddy:byte-buddy:jar:</exclude>
@@ -107,21 +111,20 @@
                                     <exclude>com.google.code.findbugs:jsr305:jar:</exclude>
                                     <exclude>com.google.j2objc:j2objc-annotations:jar:</exclude>
                                     <exclude>org.checkerframework:checker-qual:jar:</exclude>
+                                    <exclude>io.opentelemetry:opentelemetry*:jar:</exclude>
                                 </excludes>
                             </artifactSet>
 
                             <relocations>
                                 <relocation>
-                                    <pattern>io.opentelemetry</pattern>
-                                    <shadedPattern>io.github.xinfra.lab.telemetry.shade.io.opentelemetry</shadedPattern>
-                                </relocation>
-                                <relocation>
                                     <pattern>org.apache.logging.log4j</pattern>
-                                    <shadedPattern>io.github.xinfra.lab.telemetry.shade.org.apache.logging.log4j</shadedPattern>
+                                    <shadedPattern>io.github.xinfra.lab.telemetry.shade.org.apache.logging.log4j
+                                    </shadedPattern>
                                 </relocation>
                                 <relocation>
                                     <pattern>org.apache.commons</pattern>
-                                    <shadedPattern>io.github.xinfra.lab.telemetry.shade.org.apache.commons</shadedPattern>
+                                    <shadedPattern>io.github.xinfra.lab.telemetry.shade.org.apache.commons
+                                    </shadedPattern>
                                 </relocation>
                                 <relocation>
                                     <pattern>com.google</pattern>
@@ -130,7 +133,8 @@
                             </relocations>
 
                             <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                             </transformers>
                         </configuration>
                     </execution>
