--- a/x-telemetry/x-telemetry-agent/pom.xml
+++ b/x-telemetry/x-telemetry-agent/pom.xml
@@ -94,7 +94,7 @@
                         <goals><goal>run</goal></goals>
                         <configuration>
                             <target>
-                                <delete dir="${project.basedir}/../dist/x-telemetry-agent"/>
+                                <delete dir="${maven.multiModuleProjectDirectory}/dist"/>
                             </target>
                         </configuration>
                     </execution>
@@ -104,12 +104,12 @@
                         <goals><goal>run</goal></goals>
                         <configuration>
                             <target>
-                                <mkdir dir="${project.basedir}/../dist/x-telemetry-agent"/>
+                                <mkdir dir="${maven.multiModuleProjectDirectory}/dist/x-telemetry-agent"/>
                                 <copy file="${project.build.directory}/${project.artifactId}-${project.version}.jar"
-                                      tofile="${project.basedir}/../dist/x-telemetry-agent/x-telemetry-agent.jar" overwrite="true" />
-                                <mkdir dir="${project.basedir}/../dist/x-telemetry-agent/config"/>
-                                <mkdir dir="${project.basedir}/../dist/x-telemetry-agent/logs"/>
-                                <copydir src="${project.basedir}/../config" dest="${project.basedir}/../dist/x-telemetry-agent/config"
+                                      tofile="${maven.multiModuleProjectDirectory}/dist/x-telemetry-agent/x-telemetry-agent.jar" overwrite="true" />
+                                <mkdir dir="${maven.multiModuleProjectDirectory}/dist/x-telemetry-agent/config"/>
+                                <mkdir dir="${maven.multiModuleProjectDirectory}/dist/x-telemetry-agent/logs"/>
+                                <copydir src="${maven.multiModuleProjectDirectory}/config" dest="${maven.multiModuleProjectDirectory}/dist/x-telemetry-agent/config"
                                          forceoverwrite="true" />
                             </target>
                         </configuration>
