--- a/x-telemetry/x-telemetry-plugin/pom.xml
+++ b/x-telemetry/x-telemetry-plugin/pom.xml
@@ -18,6 +18,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <plugin.dest.dir>${maven.multiModuleProjectDirectory}/dist/x-telemetry-agent/plugins</plugin.dest.dir>
     </properties>
 
     <dependencies>
@@ -62,6 +63,27 @@
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                             </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals><goal>run</goal></goals>
+                        <configuration>
+                            <target>
+                                <mkdir dir="${plugin.dest.dir}" />
+                                <copy todir="${plugin.dest.dir}">
+                                    <fileset dir="${project.build.directory}">
+                                        <include name="${project.artifactId}-${project.version}.jar"/>
+                                    </fileset>
+                                </copy>
+                            </target>
                         </configuration>
                     </execution>
                 </executions>
