--- a/x-telemetry/config/x-telemetry-agent.config
+++ b/x-telemetry/config/x-telemetry-agent.config
@@ -3,8 +3,20 @@ serviceName=my-application
 group=default
 enable=true
 
-# collector config
-collector.collectorEndpoint=localhost:2333
+# agent log config
+agentLogConfig.level=debug
 
 # plugin config
 plugin.disabledPlugins=[]
+
+
+# metric provider
+meterProviderConfig.meterProviderType=Prometheus
+meterProviderConfig.prometheusConfig.port=9456
+
+# trace provider
+tracerProviderConfig.tracerProviderType=Zipkin
+tracerProviderConfig.zipkinConfig.endpoint=http://localhost:9411/api/v2/spans
+
+# logger provider
+loggerProviderConfig.loggerProviderType=GrafanaLoki
