agent start success

--- a/x-telemetry/config/x-telemetry-agent.config
+++ b/x-telemetry/config/x-telemetry-agent.config
@@ -7,16 +7,17 @@ enable=true
 agentLogConfig.level=debug
 
 # plugin config
-plugin.disabledPlugins=[]
+pluginConfig.disabledPlugins=example1-plugin,example2-plugin
 
 
 # metric provider
-meterProviderConfig.meterProviderType=Prometheus
+meterProviderConfig.meterProviderType=prometheus
 meterProviderConfig.prometheusConfig.port=9456
 
 # trace provider
-tracerProviderConfig.tracerProviderType=Zipkin
+tracerProviderConfig.tracerProviderType=zipkin
 tracerProviderConfig.zipkinConfig.endpoint=http://localhost:9411/api/v2/spans
 
 # logger provider
-loggerProviderConfig.loggerProviderType=GrafanaLoki
+loggerProviderConfig.loggerProviderType=otlp
+loggerProviderConfig.otlpConfig.logEndpoint=http://localhost:4317/v1/logs
